src/backend-mult.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: hm5
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: main-backend
  template:
    metadata: 
      labels:
        app: main-backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool

---

apiVersion: v1 
kind: Service
metadata:
  name: service-backend
  namespace: hm5
spec:
  ports:
  - name: main-backend
    port: 80
  selector:
    app: main-backend
