src/frontend-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: hm5
spec: 
  replicas: 3
  selector:
    matchLabels: 
      app: main-front 
  template:
    metadata:
      labels:
        app: main-front
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.2

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: hm5
spec:
  ports:
    - name: main-front
      port: 80
  selector:
    app: main-front
